--- a/package.json
+++ b/package.json
@@ -35,12 +35,25 @@
     "@angular/localize": "^16.2.0",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.11",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.2.5",
     "typescript": "~5.1.3"
+  },
+  "prettier": "prettier --write src/**/*.{ts,js,css,html}",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier --staged && ng lint && npm test",
+      "pre-push": "ng build --aot true"
+    }
   }
 }
